--- a/ui_files/nebula.ui
+++ b/ui_files/nebula.ui
@@ -269,6 +269,11 @@ QPushButton:disabled{
       <property name="title">
        <string/>
       </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0">
+        <widget class="QTreeView" name="treeOutline"/>
+       </item>
+      </layout>
      </widget>
     </item>
     <item row="1" column="1">
@@ -316,7 +321,7 @@ border:2px solid white;
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>30</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
