--- a/ui_files/rsrcs.qrc
+++ b/ui_files/rsrcs.qrc
@@ -1,5 +1,10 @@
 <RCC>
   <qresource prefix="images">
+    <file>resources/folder.png</file>
+    <file>resources/file.png</file>
+    <file>resources/arrow_right.png</file>
+    <file>resources/arrow_down.png</file>
+    <file>resources/save.png</file>
     <file>resources/install.png</file>
     <file>resources/clean.png</file>
     <file>resources/debug.png</file>
